--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hotkeys-hook": "^3.4.6",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.2",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
