--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-hotkeys-hook": "^3.4.6",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.7.2",
     "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
