--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.7.2",
-    "use-interval": "^1.4.0",
-    "web-vitals": "^2.1.4"
+    "use-interval": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
